# hvif-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
data/: beeicon.hvif
hvif_rs/: index.html  sidebar-items.js
hvif_rs/parser/: fn.hvif_image.html  hvif_image.v.html  index.html  sidebar-items.js
hvif_rs/types/: HVIFFlag.t.html  HVIFImage.t.html  HVIF_GRADIENT_FLAG_COLORS_16_BIT.v.html  HVIF_GRADIENT_FLAG_GRAYS.v.html  HVIF_GRADIENT_FLAG_NO_ALPHA.v.html  HVIF_GRADIENT_FLAG_TRANSFORM.v.html  HVIF_PATH_FLAG_CLOSED.v.html  HVIF_PATH_FLAG_NO_CURVES.v.html  HVIF_PATH_FLAG_USES_COMMANDS.v.html  HVIF_SHAPE_FLAG_HAS_TRANSFORMERS.v.html  HVIF_SHAPE_FLAG_HINTING.v.html  HVIF_SHAPE_FLAG_LOD_SCALE.v.html  HVIF_SHAPE_FLAG_TRANSFORM.v.html  HVIF_SHAPE_FLAG_TRANSLATION.v.html  index.html  (+15 more)
nom/: enum.CompareResult.html  enum.ConsumerState.html  enum.Endianness.html  enum.ErrorKind.html  enum.FileProducerState.html  enum.IError.html  enum.IResult.html  enum.Input.html  enum.Move.html  enum.Needed.html  fn.alpha.html  fn.alphanumeric.html  fn.anychar.html  fn.be_f32.html  fn.be_f64.html  fn.be_i16.html  fn.be_i32.html  fn.be_i64.html  fn.be_i8.html  fn.be_u16.html  fn.be_u32.html  fn.be_u64.html  fn.be_u8.html  fn.begin.html  fn.code_from_offset.html  fn.crlf.html  fn.digit.html  fn.double.html  fn.double_s.html  fn.eol.html  fn.error_to_u32.html  fn.float.html  fn.float_s.html  fn.hex_digit.html  fn.hex_u32.html  fn.is_alphabetic.html  fn.is_alphanumeric.html  fn.is_digit.html  fn.is_hex_digit.html  fn.is_oct_digit.html  (+159 more)
src/: lib.rs  parser.rs  types.rs
(+105 files in other folders)
