[package]
name = "hvif-rs"
version = "0.1.0"
authors = ["Ben Elliott <benjam.elliott@gmail.com>"]
repository = "https://github.com/Lacaranian/hvif-rs.git"
license = "MIT"
readme = "README.md"
description = "Read and write icons in the Haiku Vector Icon Format."

[dependencies]
clippy = {version = "0.0.113", optional = true}

[dependencies.nom]
version = "^2.1"

[features]
default = []
dev = ["clippy"]
core = ["nom/core"]

[badges]
travis-ci = { repository = "Lacaranian/hvif-rs" }
